<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingList">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/apple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apple"
                android:textSize="14sp"
                android:onClick="setItem"
                />

            <TextView
                android:id="@+id/banana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banana"
                android:onClick="setItem"/>

            <TextView
                android:id="@+id/eggs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eggs"
                android:onClick="setItem"/>

            <TextView
                android:id="@+id/chicken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chicken"
                android:onClick="setItem"/>

            <TextView
                android:id="@+id/fish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fish"
                android:onClick="setItem"/>

            <TextView
                android:id="@+id/pasta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pasta"
                android:onClick="setItem"/>

            <TextView
                android:id="@+id/rice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rice"
                android:onClick="setItem"/>

            <TextView
                android:id="@+id/milk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/milk"
                android:onClick="setItem"/>

            <TextView
                android:id="@+id/ice_cream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ice_cream"
                android:onClick="setItem"/>

            <TextView
                android:id="@+id/pizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pizza"
                android:onClick="setItem"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>